--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,25 @@
           <ul class="nav navbar-nav pull-right">
             <li><%= link_to "Главная",   root_path %></li>
             <li><%= link_to "Помощь",   root_path %></li>
-            <li><%= link_to "Log in", '#' %></li>
+            
+            <% if signed_in? %>
+          <li><%= link_to "Пользователь", '#' %></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+              Аккаунт <b class="caret"></b>
+            </a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "Профиль", current_user %></li>
+              <li><%= link_to "Настройки", '#' %></li>
+              <li class="divider"></li>
+              <li>
+                <%= link_to "Выход", signout_path, method: "delete" %>
+              </li>
+            </ul>
+          </li>
+        <% else %>
+          <li><%= link_to "Sign in", signin_path %></li>
+        <% end %>
           </ul>
         </nav>
       </div>
