--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,7 +7,7 @@
             <li><%= link_to "Помощь",   root_path %></li>
             
             <% if signed_in? %>
-          <li><%= link_to "Пользователь", '#' %></li>
+          <li><%= link_to "Пользователь", users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Аккаунт <b class="caret"></b>
