--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,7 @@ html {
 }
 
 body {
+  background: url("http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/kindajean.png");
   padding-top: 60px;
 }
 
@@ -20,6 +21,7 @@ textarea {
 }
 
 .center {
+  background: url("http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/light_grey.png");
   text-align: center;
 }
 
