--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,12 +1,13 @@
 <footer class="footer">
+ 
   <small>
-    <a href="http://web.method.kz/">Курс веб-программирования</a>
+    <a href="http://www.vk.com/akzhaan">Akzhan Tamay</a>
   </small>
   <nav>
     <ul>
       <li><%= link_to "About",   about_path %></li>
       <li><%= link_to "Contact", '#' %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
+      
     </ul>
   </nav>
 </footer>
