--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,13 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
       <div class="container">
-        <%= link_to "Twitter", root_path, id: "logo" %>
+        <%= link_to "TWITTER", root_path, id: "logo" %>
         <nav>
           <ul class="nav navbar-nav pull-right">
             <li><%= link_to "Главная",   root_path %></li>
             <li><%= link_to "Помощь",   root_path %></li>
             
             <% if signed_in? %>
-          <li><%= link_to "Пользователь", users_path %></li>
+          <li><%= link_to "Пользователи", users_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Аккаунт <b class="caret"></b>
