--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -20,13 +20,10 @@
 <% else %>
 
 <div class="center jumbotron">
-  <h1>Добро пожаловать в Twitter!</h1>
+  <h1>Добро пожаловать!</h1>
+  <h2>Это социальная сеть специально для Акжана и его друзей!</h2> 
 
-  <h2>
-    это домашняя страница для социальной сети <a href="http://web.method.kz/">курса по
-    Ruby on Rails</a>
-    sample application.
-  </h2>
+  
 
   <%= link_to "Регистрация", signup_path, class: "btn btn-lg btn-primary" %>
  
